start using flexboxgrid framework

--- a/Cryptocurrency/index.html
+++ b/Cryptocurrency/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <!-- <style src="node_modules/vue-flexboxgrid/dist/vue-flexboxgrid.css"/> -->
     <title>cryptocurrency</title>
+
   </head>
   <body>
     <div id="app"></div>
